--- a/index.html
+++ b/index.html
@@ -9,6 +9,37 @@
 </head>
 <body>
 	<h1>Contacts</h1>
+	<h2>Add a contact:</h2>
+
+	<div>
+		<ul id="entry">
+			<li class="input-list-item">
+				<label for="first-name">First Name </label><br>
+				<input id="first-name" type="text" placeholder="first name">
+			</li>
+			<li class="input-list-item">
+				<label for="last-name">Last Name </label><br>
+				<input id="last-name" type="text" placeholder="last name">
+			</li>
+			<li class="input-list-item">
+				<label for="telephone">Telephone </label><button id="btnAddTelephone">Add</button><br>
+				<input id="telephone" type="text" placeholder="XXX-XXX-XXXX">
+			</li>
+			<li class="input-list-item">
+				<label for="street">Street </label><br>
+				<input id="street" type="text" placeholder="street address">
+			</li>
+			<li class="input-list-item">
+				<label for="city">City </label><br>
+				<input id="city" type="text" placeholder="city">
+			</li>
+			<li class="input-list-item">
+				<label for="state">State </label><br>
+				<input id="state" type="text" placeholder="NY">
+			</li>
+		</ul>
+		<button id="btnAddContact">Add Contact</button>
+	</div>
 	
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="js/app.js"></script>	
