working on framework

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<h1>Contacts</h1>
 	<h2>Add a contact:</h2>
 
-	<div>
-		<ul id="entry">
+	<div id="entry">
+		<ul>
 			<li class="input-list-item">
 				<label for="first-name">First Name </label><br>
 				<input id="first-name" type="text" placeholder="first name">
@@ -40,6 +40,13 @@
 		</ul>
 		<button id="btnAddContact">Add Contact</button>
 	</div>
+
+	<div id="individual-detail">
+		<button id="btnEdit">Edit</button>
+	</div>
+
+	<div id="contact-list"></div>
+
 	
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
 	<script src="js/app.js"></script>	
