--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
 	
 	<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+	<script src="js/sample-contacts.js"></script>	
 	<script src="js/app.js"></script>	
 </body>
 </html>
